--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,8 +25,10 @@
                 </div>
             </div>
         </div>
-
             {% block body %}
+                {% for hotel in hotels %}
+                    {{ hotel.name }} <br />
+                {% endfor %}
             {% endblock %}
     </body>
 </html>
