Create new endpoint to get hotel reservations.
Create ValueObject base class and interface.
Added Room ValueObject to delegate extra information.

DB updated.

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,14 +21,18 @@
             </div>
             <div class="info" style="color: #607d8b">
                 <div>
-
+                <h3>Hotel list:</h3>
+                {% block body %}
+                    <ul>
+                    {% for hotel in hotels %}
+                        <li>
+                            <a href="/hotel/{{ hotel.id }}/reservation">{{ hotel.name }}</a>
+                        </li>
+                    {% endfor %}
+                    </ul>
+                {% endblock %}
                 </div>
             </div>
         </div>
-            {% block body %}
-                {% for hotel in hotels %}
-                    {{ hotel.name }} <br />
-                {% endfor %}
-            {% endblock %}
     </body>
 </html>
